dataset1235/2025-2/610742602/users/2485683856/executions/677928262_4233865845.log
== SUBMISSION (2025-08-26 21:54:42)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:49:30)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:50:31)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:54:48)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:50:25)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:49:02)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:49:01)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:55:13)
-- CODE: 
celcius = float(input())

fahrenheit = (celcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:49:28)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:53:38)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:50:40)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:49:05)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:31:37)
-- CODE: 
celcius = float(input())

fahrenheit = (celcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:53:30)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:55:16)
-- CODE: 
celcius = float(input())

fahrenheit = (celcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:50:37)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:53:27)
-- CODE: 
celcius = float(input())

fahrenheit = (calcius * 9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fahrenheit = (calcius * 9/5) + 32
                  ^^^^^^^
NameError: name 'calcius' is not defined. Did you mean: 'celcius'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
